--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # set -g default-command "reattach-to-user-namespace -l zsh"
-
+set-option -g history-limit 10000
 # automatically renumber tmux windows
 set -g renumber-windows on
 
