trying to add nvim-cmp.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,7 +48,7 @@ bind-key -n C-Space resize-pane -Z
 setw -g mode-keys vi
 # more settings to make copy-mode more vim-like
 unbind [
-bind Escape copy-mode
+bind q copy-mode
 unbind p
 bind p paste-buffer
 bind -T copy-mode-vi v send -X begin-selection
