Change and push on 04.01.2023.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,6 +75,8 @@ set -g status-interval 5
 
 tmux_bg='#282c37'
 tmux_fg='#cbccc5'
+# tmux_bg='default'
+# tmux_fg='default'
 tmux_aqua='#bae67e'
 tmux_beige='#ffd580'
 tmux_blue='#73d0ff'
